# bursttries-for-autocompletion

./: CMakeLists.txt  README.md  main.cpp  output
datasets/autocompletion/aol/: aol_25.txt  aol_50.txt  aol_75.txt  original_queries.txt  q17_1.txt  q17_2.txt  q17_3.txt
methods/beva-bursttrie-BFS/: main.h  path.cfg  run.sh
methods/beva-bursttrie-BFS/cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  Trie.cpp  utils.cpp
methods/beva-bursttrie-BFS/header/: ActiveNode.h  Beva.h  C.h  Directives.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  Node.h  ShortVector.h  State.h  StaticString.h  Trie.h  utils.h
methods/beva-bursttrie-dynamic/: main.h  path.cfg  run.sh
methods/beva-bursttrie-dynamic/cpp/: AccessTrie.cpp  ActiveNode.cpp  Beva.cpp  BurstTrie.cpp  BurstTrieComponent.cpp  Container.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  utils.cpp
methods/beva-bursttrie-dynamic/header/: AccessTrie.h  ActiveNode.h  Beva.h  BurstTrie.h  BurstTrieComponent.h  C.h  Container.h  Directives.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  GlobalVariables.h  ShortVector.h  State.h  StaticString.h  utils.h
methods/beva-cpt-BFS/: main.h  path.cfg  run.sh
methods/beva-cpt-BFS/cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  Trie.cpp  utils.cpp
methods/beva-cpt-BFS/header/: ActiveNode.h  Beva.h  C.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  Node.h  ShortVector.h  State.h  StaticString.h  Trie.h  utils.h
methods/beva-trie-BFS/: main.h  path.cfg
methods/beva-trie-BFS/cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  Trie.cpp  utils.cpp
methods/beva-trie-BFS/header/: ActiveNode.h  Beva.h  C.h  Directives.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  GlobalVariables.h  Node.h  ShortVector.h  State.h  StaticString.h  Trie.h  utils.h
methods/beva-trie-DFS/: main.h  path.cfg  run.sh
methods/beva-trie-DFS/cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  Trie.cpp  utils.cpp
methods/beva-trie-DFS/header/: ActiveNode.h  Beva.h  C.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  GlobalVariables.h  Node.h  ShortVector.h  State.h  StaticString.h  Trie.h  utils.h
methods/beva-trie-dynamic/: main.h  path.cfg
methods/beva-trie-dynamic/cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  State.cpp  StaticString.cpp  Trie.cpp  utils.cpp
methods/beva-trie-dynamic/header/: ActiveNode.h  Beva.h  C.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  GlobalVariables.h  Node.h  ShortVector.h  State.h  StaticString.h  Trie.h  utils.h
methods/fuzzy-suffix-array/: main.h  path.cfg  run.sh
methods/fuzzy-suffix-array/cpp/: Experiment.cpp  Framework.cpp  StaticString.cpp  SuffixArray.cpp  utils.cpp
methods/fuzzy-suffix-array/header/: C.h  Directives.h  Experiment.h  Framework.h  GlobalVariables.h  StaticString.h  SuffixArray.h  utils.h
server/: crow_all.h
