cmake_minimum_required(VERSION 3.19)
project(paper_final)

set(CMAKE_CXX_STANDARD 14)

include_directories(methods/beva-bursttrie-dynamic/header)
include_directories(methods/beva-bursttrie-BFS/header)
include_directories(methods/fuzzy-suffix-array/header)

add_executable(paper_final
        methods/beva-bursttrie-dynamic/cpp/AccessTrie.cpp
        methods/beva-bursttrie-dynamic/cpp/ActiveNode.cpp
        methods/beva-bursttrie-dynamic/cpp/Beva.cpp
        methods/beva-bursttrie-dynamic/cpp/BurstTrie.cpp
        methods/beva-bursttrie-dynamic/cpp/BurstTrieComponent.cpp
        methods/beva-bursttrie-dynamic/cpp/Container.cpp
        methods/beva-bursttrie-dynamic/cpp/EditVector.cpp
        methods/beva-bursttrie-dynamic/cpp/EditVectorAutomata.cpp
        methods/beva-bursttrie-dynamic/cpp/Experiment.cpp
        methods/beva-bursttrie-dynamic/cpp/Framework.cpp
        methods/beva-bursttrie-dynamic/cpp/State.cpp
        methods/beva-bursttrie-dynamic/cpp/StaticString.cpp
        methods/beva-bursttrie-dynamic/cpp/utils.cpp
        methods/beva-bursttrie-dynamic/header/AccessTrie.h
        methods/beva-bursttrie-dynamic/header/ActiveNode.h
        methods/beva-bursttrie-dynamic/header/Beva.h
        methods/beva-bursttrie-dynamic/header/BurstTrie.h
        methods/beva-bursttrie-dynamic/header/BurstTrieComponent.h
        methods/beva-bursttrie-dynamic/header/C.h
        methods/beva-bursttrie-dynamic/header/Container.h
        methods/beva-bursttrie-dynamic/header/Directives.h
        methods/beva-bursttrie-dynamic/header/EditVector.h
        methods/beva-bursttrie-dynamic/header/EditVectorAutomata.h
        methods/beva-bursttrie-dynamic/header/Experiment.h
        methods/beva-bursttrie-dynamic/header/Framework.h
        methods/beva-bursttrie-dynamic/header/GlobalVariables.h
        methods/beva-bursttrie-dynamic/header/ShortVector.h
        methods/beva-bursttrie-dynamic/header/State.h
        methods/beva-bursttrie-dynamic/header/StaticString.h
        methods/beva-bursttrie-dynamic/header/utils.h
        methods/beva-bursttrie-dynamic/main.h

        methods/beva-bursttrie-BFS/cpp/ActiveNode.cpp
        methods/beva-bursttrie-BFS/cpp/Beva.cpp
        methods/beva-bursttrie-BFS/cpp/EditVector.cpp
        methods/beva-bursttrie-BFS/cpp/EditVectorAutomata.cpp
        methods/beva-bursttrie-BFS/cpp/Experiment.cpp
        methods/beva-bursttrie-BFS/cpp/Framework.cpp
        methods/beva-bursttrie-BFS/cpp/State.cpp
        methods/beva-bursttrie-BFS/cpp/StaticString.cpp
        methods/beva-bursttrie-BFS/cpp/Trie.cpp
        methods/beva-bursttrie-BFS/cpp/utils.cpp
        methods/beva-bursttrie-BFS/header/ActiveNode.h
        methods/beva-bursttrie-BFS/header/Beva.h
        methods/beva-bursttrie-BFS/header/C.h
        methods/beva-bursttrie-BFS/header/Directives.h
        methods/beva-bursttrie-BFS/header/EditVector.h
        methods/beva-bursttrie-BFS/header/EditVectorAutomata.h
        methods/beva-bursttrie-BFS/header/Experiment.h
        methods/beva-bursttrie-BFS/header/Framework.h
        methods/beva-bursttrie-BFS/header/ShortVector.h
        methods/beva-bursttrie-BFS/header/State.h
        methods/beva-bursttrie-BFS/header/StaticString.h
        methods/beva-bursttrie-BFS/header/Trie.h
        methods/beva-bursttrie-BFS/header/utils.h
        methods/beva-bursttrie-BFS/main.h

        methods/beva-cpt-BFS/cpp/ActiveNode.cpp
        methods/beva-cpt-BFS/cpp/Beva.cpp
        methods/beva-cpt-BFS/cpp/EditVector.cpp
        methods/beva-cpt-BFS/cpp/EditVectorAutomata.cpp
        methods/beva-cpt-BFS/cpp/Experiment.cpp
        methods/beva-cpt-BFS/cpp/Framework.cpp
        methods/beva-cpt-BFS/cpp/State.cpp
        methods/beva-cpt-BFS/cpp/StaticString.cpp
        methods/beva-cpt-BFS/cpp/Trie.cpp
        methods/beva-cpt-BFS/cpp/utils.cpp
        methods/beva-cpt-BFS/header/ActiveNode.h
        methods/beva-cpt-BFS/header/Beva.h
        methods/beva-cpt-BFS/header/C.h
        methods/beva-cpt-BFS/header/Directives.h
        methods/beva-cpt-BFS/header/EditVector.h
        methods/beva-cpt-BFS/header/EditVectorAutomata.h
        methods/beva-cpt-BFS/header/Experiment.h
        methods/beva-cpt-BFS/header/Framework.h
        methods/beva-cpt-BFS/header/ShortVector.h
        methods/beva-cpt-BFS/header/State.h
        methods/beva-cpt-BFS/header/StaticString.h
        methods/beva-cpt-BFS/header/Trie.h
        methods/beva-cpt-BFS/header/utils.h
        methods/beva-cpt-BFS/main.h

        methods/beva-trie-BFS/cpp/ActiveNode.cpp
        methods/beva-trie-BFS/cpp/Beva.cpp
        methods/beva-trie-BFS/cpp/EditVector.cpp
        methods/beva-trie-BFS/cpp/EditVectorAutomata.cpp
        methods/beva-trie-BFS/cpp/Experiment.cpp
        methods/beva-trie-BFS/cpp/Framework.cpp
        methods/beva-trie-BFS/cpp/State.cpp
        methods/beva-trie-BFS/cpp/StaticString.cpp
        methods/beva-trie-BFS/cpp/Trie.cpp
        methods/beva-trie-BFS/cpp/utils.cpp
        methods/beva-trie-BFS/header/ActiveNode.h
        methods/beva-trie-BFS/header/Beva.h
        methods/beva-trie-BFS/header/C.h
        methods/beva-trie-BFS/header/Directives.h
        methods/beva-trie-BFS/header/EditVector.h
        methods/beva-trie-BFS/header/EditVectorAutomata.h
        methods/beva-trie-BFS/header/Experiment.h
        methods/beva-trie-BFS/header/Framework.h
        methods/beva-trie-BFS/header/GlobalVariables.h
        methods/beva-trie-BFS/header/ShortVector.h
        methods/beva-trie-BFS/header/State.h
        methods/beva-trie-BFS/header/StaticString.h
        methods/beva-trie-BFS/header/Trie.h
        methods/beva-trie-BFS/header/utils.h
        methods/beva-trie-BFS/main.h

        methods/beva-trie-DFS/cpp/ActiveNode.cpp
        methods/beva-trie-DFS/cpp/Beva.cpp
        methods/beva-trie-DFS/cpp/EditVector.cpp
        methods/beva-trie-DFS/cpp/EditVectorAutomata.cpp
        methods/beva-trie-DFS/cpp/Experiment.cpp
        methods/beva-trie-DFS/cpp/Framework.cpp
        methods/beva-trie-DFS/cpp/State.cpp
        methods/beva-trie-DFS/cpp/StaticString.cpp
        methods/beva-trie-DFS/cpp/Trie.cpp
        methods/beva-trie-DFS/cpp/utils.cpp
        methods/beva-trie-DFS/header/ActiveNode.h
        methods/beva-trie-DFS/header/Beva.h
        methods/beva-trie-DFS/header/C.h
        methods/beva-trie-DFS/header/Directives.h
        methods/beva-trie-DFS/header/EditVector.h
        methods/beva-trie-DFS/header/EditVectorAutomata.h
        methods/beva-trie-DFS/header/Experiment.h
        methods/beva-trie-DFS/header/Framework.h
        methods/beva-trie-DFS/header/GlobalVariables.h
        methods/beva-trie-DFS/header/ShortVector.h
        methods/beva-trie-DFS/header/State.h
        methods/beva-trie-DFS/header/StaticString.h
        methods/beva-trie-DFS/header/Trie.h
        methods/beva-trie-DFS/header/utils.h
        methods/beva-trie-DFS/main.h

        methods/beva-trie-dynamic/cpp/ActiveNode.cpp
        methods/beva-trie-dynamic/cpp/Beva.cpp
        methods/beva-trie-dynamic/cpp/EditVector.cpp
        methods/beva-trie-dynamic/cpp/EditVectorAutomata.cpp
        methods/beva-trie-dynamic/cpp/Experiment.cpp
        methods/beva-trie-dynamic/cpp/Framework.cpp
        methods/beva-trie-dynamic/cpp/State.cpp
        methods/beva-trie-dynamic/cpp/StaticString.cpp
        methods/beva-trie-dynamic/cpp/Trie.cpp
        methods/beva-trie-dynamic/cpp/utils.cpp
        methods/beva-trie-dynamic/header/ActiveNode.h
        methods/beva-trie-dynamic/header/Beva.h
        methods/beva-trie-dynamic/header/C.h
        methods/beva-trie-dynamic/header/Directives.h
        methods/beva-trie-dynamic/header/EditVector.h
        methods/beva-trie-dynamic/header/EditVectorAutomata.h
        methods/beva-trie-dynamic/header/Experiment.h
        methods/beva-trie-dynamic/header/Framework.h
        methods/beva-trie-dynamic/header/GlobalVariables.h
        methods/beva-trie-dynamic/header/ShortVector.h
        methods/beva-trie-dynamic/header/State.h
        methods/beva-trie-dynamic/header/StaticString.h
        methods/beva-trie-dynamic/header/Trie.h
        methods/beva-trie-dynamic/header/utils.h
        methods/beva-trie-dynamic/main.h

        methods/fuzzy-suffix-array/cpp/Experiment.cpp
        methods/fuzzy-suffix-array/cpp/Framework.cpp
        methods/fuzzy-suffix-array/cpp/StaticString.cpp
        methods/fuzzy-suffix-array/cpp/SuffixArray.cpp
        methods/fuzzy-suffix-array/cpp/utils.cpp
        methods/fuzzy-suffix-array/header/C.h
        methods/fuzzy-suffix-array/header/Directives.h
        methods/fuzzy-suffix-array/header/Experiment.h
        methods/fuzzy-suffix-array/header/Framework.h
        methods/fuzzy-suffix-array/header/GlobalVariables.h
        methods/fuzzy-suffix-array/header/StaticString.h
        methods/fuzzy-suffix-array/header/SuffixArray.h
        methods/fuzzy-suffix-array/header/utils.h
        methods/fuzzy-suffix-array/main.h
        server/crow_all.h
        main.cpp)
